src/objects/IDP_Developmental_Line_Item__c.object
<CustomObject>
    <description>Child object to Developmental Objectives. Used to capture developmental activity line items.</description>
    <fields>
        <fullName>Activity_Type_List__c</fullName>
        <inlineHelpText>Activity Type - Select the option that most closely fits your activity</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>In Person Training</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>On the Job Activities</fullName>
                </value>
                <value>
                    <fullName>Online Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shadowing</fullName>
                </value>
                <value>
                    <fullName>Structured Development Program</fullName>
                </value>
                <value>
                    <fullName>Training Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activity Type - Select the option that most closely fits your activity</inlineHelpText>
        <label>Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Title__c</fullName>
        <description>This is a generic title for all developmental activities that can fall under IDP.</description>
        <inlineHelpText>Activity Name - Enter a brief description of the Activity</inlineHelpText>
        <label>Activity Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Books_Material_Costs__c</fullName>
        <inlineHelpText>Estimated Books &amp; Material Cost - Insert the materials cost for training that was paid for
by the Federal Government. (Refer to the Guide for Human Resources Reporting at
http://www.opm.gov/feddata/guidance.asp for more information) Example Format: 250.</inlineHelpText>
        <label>Estimated Books &amp; Material Costs</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments - Enter any comments/notes related to your IDP</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <inlineHelpText>Completed Date - Use this field if you want to keep a record of your activity completions only after your IDP is Approved</inlineHelpText>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Material__c</fullName>
        <description>material fees: books, documents.  materials needed to complete course study</description>
        <inlineHelpText>Costs Books &amp; Materials - This field represents the estimated material fees: books, documents or other materials needed to complete the activity.</inlineHelpText>
        <label>Cost Books &amp; Materials</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Travel__c</fullName>
        <description>Travel Fees</description>
        <inlineHelpText>Estimated Travel Cost - This field represents the estimated travel cost that the Activity is expected to cost. Example Format: 500.</inlineHelpText>
        <label>Estimated Travel Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Created Date - This field will automatically show the date the activity was created.</inlineHelpText>
        <label>Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developmental_Objective__c</fullName>
        <description>Lookup to Objective from Activity

One Objective of an IDP can have mutiple Activity</description>
        <inlineHelpText>Developmental Objective - Select the Objective that your new Activity will be associated with</inlineHelpText>
        <label>Developmental Objective</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>Developmental_Objective__c.IDP__r.IDP_Status__c</field>
                <operation>equals</operation>
                <value>New, Needs Revision, Resubmit, Approved</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>Developmental_Objective__c.IDP__r.OwnerId</valueField>
            </filterItems>
            <filterItems>
                <field>Developmental_Objective__c.IDP__r.Id</field>
                <operation>equals</operation>
                <valueField>Developmental_Objective__c.IDP__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <valueField>Developmental_Objective__c.IDP__r.Supervisor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Developmental_Objective__c</referenceTo>
        <relationshipLabel>Developmental Activities</relationshipLabel>
        <relationshipName>Developmental_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Outcomes__c</fullName>
        <inlineHelpText>Expected Outcomes - Examples of Expected Outcomes: Enhanced ability to lead my team through needed changes, help achieve key objective for GSA, direct reports are finishing their own work to a high standard, without my direct involvement</inlineHelpText>
        <label>Expected Outcomes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Activity_Status__c</fullName>
        <description>Approval IDP Activity Status</description>
        <label>Activity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Plan Approved</fullName>
                </value>
                <value>
                    <fullName>Plan Rejected</fullName>
                </value>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Primary  Supervisor Approved</fullName>
                </value>
                <value>
                    <fullName>Primary  Supervisor Rejected</fullName>
                </value>
                <value>
                    <fullName>Secondary Supervisor Approved</fullName>
                </value>
                <value>
                    <fullName>Secondary Supervisor Rejected</fullName>
                </value>
                <value>
                    <fullName>Training Coordinator Approved</fullName>
                </value>
                <value>
                    <fullName>Training Coordinator Rejected</fullName>
                </value>
                <value>
                    <fullName>Financial Approved</fullName>
                </value>
                <value>
                    <fullName>Financial Rejected</fullName>
                </value>
                <value>
                    <fullName>Certification Submitted</fullName>
                </value>
                <value>
                    <fullName>Certification Approved</fullName>
                </value>
                <value>
                    <fullName>Certification Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Activity Request Approved</fullName>
                </value>
                <value>
                    <fullName>Activity Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDP_ID__c</fullName>
        <formula>CASESAFEID(Developmental_Objective__r.IDP__r.Id)</formula>
        <inlineHelpText>IDP ID - Pre-populated ID of your IDP</inlineHelpText>
        <label>IDP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Instructions__c</fullName>
        <defaultValue>&quot;Step 1: Please input your IDP Information, Employee Information, Career Goals, IDP Objectives and click on Save.&quot;&amp;br()&amp;
&quot;Step 2: Add developmental activities by clicking on the New Developmental Activity button.&quot;&amp;br()&amp;
&quot;Step 3: Select a &apos;New Developmental Activity Type&apos; and click &apos;Continue&apos;.&quot;&amp;br()&amp;
&quot;Step 4: Please complete the Development Plan Section Only and click Save.&quot;&amp;br()&amp;
&quot;Step 5: Return to the IDP summary page by clicking on the IDP link under IDP Developmental Activity Detail.&quot;&amp;br()&amp;
&quot;             &quot;&amp;&quot;Note: Follow Step 2 to add more activities.&quot;&amp;br()&amp;
&quot;Step 6: When you are ready to submit the development plan for approval, click Submit for Approval to select your supervisor.&quot;&amp;br()&amp;
&quot;Step 7: Use the look-up field to Select your Supervisor and click on the Send to Next Approver button.&quot;</defaultValue>
        <label>IDP Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDP_Name__c</fullName>
        <formula>Developmental_Objective__r.IDP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IDP Name - The pre-populated name of your IDP</inlineHelpText>
        <label>IDP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of developmental activity</description>
        <inlineHelpText>Activity Location - Enter the name of the location for this activity</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Telephone__c</fullName>
        <inlineHelpText>Office Telephone - Enter your office telephone number</inlineHelpText>
        <label>Office Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Organization_City__c</fullName>
        <inlineHelpText>Organization City - Enter the city of the organization</inlineHelpText>
        <label>Organization City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <inlineHelpText>Estimated Per Diem - If traveling to fulfill an activity, provide the estimated per diem. Example Format: 1000.</inlineHelpText>
        <label>Estimated Per Diem</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Planned End Date for IDP Developmental Activities.</description>
        <inlineHelpText>Planned End Date - Enter the date in which your Activity will end. Example Format: MM/DD/YYYY.</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>Planned Start Date for IDP Developmental Activities</description>
        <inlineHelpText>Planned Start Date - Enter the date in which your Activity will begin. Example Format: MM/DD/YYYY.</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority for Training</description>
        <inlineHelpText>Priority - This shows the level of priority for this activity</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_IDP__c</fullName>
        <formula>Developmental_Objective__r.IDP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related IDP - The pre-populated name of the related IDP.</inlineHelpText>
        <label>Related IDP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <inlineHelpText>Required Date - The required date is mandatory if the activity is required. Example Format: MM/DD/YYYY.</inlineHelpText>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <inlineHelpText>Series - The position classification four digit series. (e.g., 0201)</inlineHelpText>
        <label>Series</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comments__c</fullName>
        <inlineHelpText>Supervisor Comments - This field is only intended for the Supervisor of this IDP; as the selected Supervisor of this IDP please add comments about the user&apos;s IDP Activity</inlineHelpText>
        <label>Supervisor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supv_Instructions_How_to_Add_Comments__c</fullName>
        <defaultValue>&quot;As a Supervisor of an IDP you have the option of adding comments to an employee&apos;s Activity within the &apos;Supervisor Comments&apos; field. Users will be able to review the comments within the &apos;Review and Submit&apos; section of their IDP. After adding your comments please be sure to select &apos;Save&apos;. If you are not automatically redirected to the user&apos;s IDP, select the link within the &apos;Developmental Objective&apos; field and from there select the link within the &apos;IDP&apos; field. This will redirect you to the main IDP section so that you can continue reviewing before approval or rejection&quot;</defaultValue>
        <label>Supv Instructions - How to Add Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Books_Material_Costs__c+Tuition_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Estimated Cost - This field calculates the total dollar value from the Estimated Tuition &amp; Fees and Estimated Books &amp; Material Costs fields.</inlineHelpText>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <inlineHelpText>Training Name - Enter the name of the training you plan to take</inlineHelpText>
        <label>Training Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Need__c</fullName>
        <description>Required or recommended training</description>
        <inlineHelpText>Is this Activity Required? - Select whether this training is required or recommended</inlineHelpText>
        <label>Is this Activity Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tuition_Fees__c</fullName>
        <description>Direct Cost - Tuition &amp; Fees</description>
        <inlineHelpText>Estimated Tuition and Fees - This field represents the estimated tuition and fees that the Activity is expected to cost. Example Format: 2000.</inlineHelpText>
        <label>Estimated Tuition &amp; Fees</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>IDP Developmental Activity Vendors</description>
        <inlineHelpText>Vendor - If applicable, enter the name of the company/university that will be conducting the training/course</inlineHelpText>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Developmental Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Create_Date__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Assignment_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Developmental Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Developmental Activities</pluralLabel>
    <recordTypes>
        <fullName>Activity</fullName>
        <active>true</active>
        <description>Record Type for all the Activities</description>
        <label>Activity</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>